Add Mandrill email service

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,32 @@
 <html>
 <head>
   <title>ProjectManager</title>
-  <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'default', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% flash.each do |name, msg| %>
+  <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+<% end %>
+  
+  <% if user_signed_in? %>
+  <header>
+  <div>
+    <%= image_tag('logo.png', :id => 'logo-img') %>
+    <%= link_to(content_tag(:button, 'Profile'), edit_user_registration_path, :class => 'headerbutton') %>
+    <%= link_to(content_tag(:button, 'Sign Out'), destroy_user_session_path, :method => :delete, :class => 'headerbutton') %>
+  </div>
+  </header>
+  <% else %>
+  <header>
+  <div>
+    <%= image_tag('logo.png', :id => 'logo-img') %>
+    <%= link_to(content_tag(:button, 'Sign Up'), new_user_registration_path, :class => 'headerbutton') %>
+    <%= link_to(content_tag(:button, 'Sign In'), new_user_session_path, :class => 'headerbutton') %>
+  </div>
+  </header>
+  <% end %>
 
 <%= yield %>
 
